# local-rag-chat

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  configs.py  docker-compose.yml  pipeline.py  pyproject.toml  settings.py
core/chat_engine/: chat_engine_manager.py
core/embeddings/: embedding_manager.py
core/llms/: base.py  ollama.py  openai.py
core/loaders/: SentenceLoader.py  simple_loader.py
core/retrievers/: hybrid_retriever.py
local_rag_chat/core/chat_engine/: chat_engine_manager.py
local_rag_chat/core/embeddings/: embedding_manager.py
local_rag_chat/core/llms/: base.py  ollama.py  openai.py
local_rag_chat/core/loaders/: base.py  simple_loader.py
local_rag_chat/core/retrievers/: hybrid_retriever.py
local_rag_chat/eval/: eval.py  rag_evaluation.ipynb
local_rag_chat/logs/: logging_config.py
local_rag_chat/pages/: chatbot.py  theme.py
pages/: chatbot.py  theme.py
