[tool.poetry]
name = "local-rag-chat"
version = "0.1.0"
description = "A project for RAG (Retrieval-Augmented Generation) using API or local LLM."
authors = ["John <phanqu6ctoan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
llama-index = "^0.11.16"
pymupdf = "^1.24.11"
gradio = "^5.0.2"
gradio-pdf = "^0.0.16"
llama-index-llms-ollama = "^0.3.4"
llama-index-llms-openai = "^0.2.13"
python-dotenv = "^1.0.1"
openai = "^1.51.2"
llama-index-embeddings-huggingface = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
